Agregando vista de auditoria y gestionar_usuario y puliendo otras vistas

--- a/templatedjango/apptemplate/static/css/style.css
+++ b/templatedjango/apptemplate/static/css/style.css
@@ -47,6 +47,10 @@ h1{
 h5{
     color: #007bff;
 }
+h3{
+    color:  #007bff;
+    font-weight: bold;
+}
 #calle{
     color: #a6a8b5;
     /* font-weight: bold; */
