--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -190,8 +190,8 @@
                         </div>
                         <div class="modal-footer">
 
-                          <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
-                          <button type="submit" class="btn btn-outline-info">Borrar</button>
+                          <button type="button" class="btn btn-outline-warning" data-dismiss="modal">Cancelar</button>
+                          <button type="submit" class="btn btn-outline-danger">Borrar</button>
                         </div>
                       </form>
                     </div>
