--- a/templatedjango/apptemplate/templates/nombre_productos/nombre_productos.html
+++ b/templatedjango/apptemplate/templates/nombre_productos/nombre_productos.html
@@ -88,7 +88,7 @@
                         <th>Acciones</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="small">
 
                     {% for mostrar in nombre %}
 
