--- a/templatedjango/apptemplate/templates/produccion/listado_produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/listado_produccion.html
@@ -94,13 +94,12 @@
                                                                                 <td>{{mostrar_detalles_produccion.id_producto.id_nombre_producto.nombre_productos}}</td>
                                                                                 <td>{{mostrar_detalles_produccion.cantidad_detalle}}</td>
                                                                                 <td>
-                                                                                    <form action="" method="post"></form>
+                                                                    
                                                                                     <div class="form-group">
-                                                                                        <input type="number" class="form-control"
-                                                                                            name="cantidad_real_detalle"
-                                                                                            placeholder="Cantidad Final">
-                                                                                            <input type="hidden" name="id_insumo" value="{{mostrar_detalles_produccion.id }}">
+                                                                                        <input type="number" class="form-control cantidad_real_detalle{{mostrar_produccion.id}}"  placeholder="Cantidad Final">
+                                                                                           
                                                                                     </div>
+
                                                                                 </td>
                                                                             </tr>
 
@@ -211,17 +210,8 @@
                                                         fecha_parcial.innerHTML = date;
 
 
-                                                        console.log(date)
+                                                        // console.log(date)
 
-
-                                                        // en esta funcion se cambia el vlor de la fecha al input oculto ara poer enviarlo al servidor
-                                                        // function cambio() {
-
-                                                        //     fecha = document.getElementById('fecha');
-                                                        //     fecha_parcial = document.getElementById('fecha_parcial{{mostrar_produccion.id}}');
-                                                        //     fecha.value = fecha_parcial.value;
-
-                                                        // }
                                                     </script>
 
 
@@ -235,26 +225,60 @@
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-outline-danger"
                                                 data-dismiss="modal">Cancelar</button>
-                                                <form id="registrar_produccion" action="listado_produccion" method="post">
+                                                <form id="terminar_produccion{{mostrar_produccion.id}}" action="listado_produccion" method="post">
+
+                                                    {% csrf_token %}
+
                                                     {% for mostrar_detalles_insumos in detalles_insumos  reversed  %}
                                                         
                                                         {% if mostrar_detalles_insumos.id_produccion.id == mostrar_produccion.id %}
-                                                            <input type="hidden" name="detalles_insumos_registrar">    
+                                                            <input type="hidden" class="detalles_insumos_registrar" name="detalles_insumos_registrar" value="{{mostrar_detalles_insumos.id}}"> 
+                                                            {% endif %}
+                                                            
+                                                            {% endfor %}
+                                                            
+                                                            {% for mostrar_detalles_produccion in detalles_produccion reversed %}
+                                                            
+                                                            {% if mostrar_detalles_produccion.id_produccion.id == mostrar_produccion.id %}
+                                                            <input type="hidden" class="detalles_produccion_registrar" name="detalles_produccion_registrar" value="{{mostrar_detalles_produccion.id}}">
+                                                            <input type="hidden" class="cantidad_final{{mostrar_produccion.id}}" name="cantidad_final" value="nada">   
                                                         {% endif %}
                                                             
                                                     {% endfor %}
 
-                                                    {% for mostrar_detalles_produccion in detalles_produccion reversed %}
-                                                        
-                                                        {% if mostrar_detalles_produccion.id_produccion.id == mostrar_produccion.id %}
-                                                            <input type="hidden" name="detalles_produccion_registrar">
-                                                        {% endif %}
-                                                            
-                                                    {% endfor %}
+                                                    <input type="hidden" name="terminar_produccion" value="terminar_produccion">
+                                                    <input type="hidden" name="terminar_produccion" value="terminar_produccion">
 
                                                     
                                                 </form>
-                                                <button type="button" class="btn btn-outline-success">Guardar Cambios</button>
+                                                <button type="button" id="finalizar_produccion{{mostrar_produccion.id}}" class="btn btn-outline-success">Guardar Cambios</button>
+
+                                                <script>
+                                                    var boton_finalizar{{mostrar_produccion.id}} = document.getElementById('finalizar_produccion{{mostrar_produccion.id}}');
+                                                    var input_cantidad_final{{mostrar_produccion.id}} = document.getElementsByClassName('cantidad_real_detalle{{mostrar_produccion.id}}');
+                                                    var cantidad_final{{mostrar_produccion.id}} = document.getElementsByClassName('cantidad_final{{mostrar_produccion.id}}');
+                                                    var form_registrar_produccion{{mostrar_produccion.id}} = document.getElementById('terminar_produccion{{mostrar_produccion.id}}');
+
+                                                    boton_finalizar{{mostrar_produccion.id}}.addEventListener('click',function(){
+                                                        // console.log('entro en el onclick');
+                                                        for (var i = 0; i < input_cantidad_final{{mostrar_produccion.id}}.length; i++) {
+                                                            
+                                                            // console.log(input_cantidad_final{{mostrar_produccion.id}}[i].value);
+
+                                                            cantidad_final{{mostrar_produccion.id}}[i].value = input_cantidad_final{{mostrar_produccion.id}}[i].value;
+
+                                                            // console.log(cantidad_final{{mostrar_produccion.id}}[i].value);
+                                                            form_registrar_produccion{{mostrar_produccion.id}}.submit()
+                                                        }
+                                                        // console.log(input_cantidad_final{{mostrar_produccion.id}}.length);
+                                                        console.log(cantidad_final{{mostrar_produccion.id}}.length);
+
+                                                    });
+                                                    
+                                                    // <component/>
+
+                                                </script>
+
                                         </div>
                                     </div>
                                 </div>
